(WIP) small implemented features uncommented and finished